# rippermod-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLA.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.claude/: settings.json
backend/: .env.example  cnmm-backend.spec  pyproject.toml  rmm-backend.spec
backend/src/chat_nexus_mod_manager/: __main__.py  config.py  constants.py  database.py  main.py
backend/src/chat_nexus_mod_manager/agents/: orchestrator.py
backend/src/chat_nexus_mod_manager/archive/: __init__.py  handler.py
backend/src/chat_nexus_mod_manager/matching/: correlator.py  filename_parser.py  grouper.py  variant_scorer.py
backend/src/chat_nexus_mod_manager/models/: __init__.py  chat.py  correlation.py  download.py  game.py  install.py  mod.py  nexus.py  profile.py  settings.py
backend/src/chat_nexus_mod_manager/nexus/: client.py
backend/src/chat_nexus_mod_manager/routers/: __init__.py  chat.py  deps.py  downloads.py  games.py  install.py  mods.py  nexus.py  onboarding.py  profiles.py  settings.py  trending.py  updates.py  vector.py
backend/src/chat_nexus_mod_manager/scanner/: service.py
backend/src/rippermod_manager/: __main__.py  config.py  database.py  main.py
backend/tests/: conftest.py
backend/tests/agents/: test_orchestrator.py
backend/tests/archive/: test_handler.py  test_rdar_parser.py
backend/tests/matching/: test_correlator.py  test_filename_parser.py  test_grouper.py  test_normalization.py
backend/tests/nexus/: test_client.py  test_graphql_client.py
backend/tests/routers/: test_chat.py  test_conflicts.py  test_fomod.py  test_games.py  test_install.py  test_install_dependents.py  test_load_order.py  test_mods.py  test_nexus.py  test_onboarding.py  test_profiles.py  test_settings.py  test_updates.py  test_vector.py
backend/tests/scanner/: test_service.py
backend/tests/services/: test_ai_search_matcher.py  test_archive_conflict_detector.py  test_archive_index_service.py  test_archive_layout.py  test_collection_matcher.py  test_conflict_service.py  test_download_service.py  test_file_content_matcher.py  test_file_list_matcher.py  test_fomod_config_parser.py  test_fomod_install_service.py  test_install_service.py  test_load_order_service.py  test_modlist_service.py  test_nexus_helpers.py  test_nexus_sync.py  test_profile_service.py  test_redscript_analysis.py  test_requirement_matcher.py  test_tweakxl_conflict_analyzer.py  test_tweakxl_parser.py  test_update_service.py
backend/tests/vector/: test_indexer.py  test_search.py
(+270 files in other folders)
