[project]
name = "chat-nexus-mod-manager"
version = "0.1.0"
description = "Chat-powered Nexus Mods manager for Cyberpunk 2077"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "chromadb>=0.6.0",
    "scikit-learn>=1.6.0",
    "jellyfish>=1.1.0",
    "xxhash>=3.5.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/chat_nexus_mod_manager"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["chat_nexus_mod_manager"]
