[project]
name = "rippermod-manager"
version = "0.1.0"
description = "AI-powered mod manager for PC games"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "chromadb>=0.6.0",
    "scikit-learn>=1.6.0",
    "jellyfish>=1.1.0",
    "xxhash>=3.5.0",
    "sse-starlette>=2.2.0",
    "py7zr>=0.22.0",
    "defusedxml>=0.7.0",
    "pefile>=2024.8.26",
    "pyyaml>=6.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "rarfile>=4.2",
]

[project.optional-dependencies]
search = ["tavily-python>=0.7.0"]
dev = ["ruff>=0.8.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]
build = ["pyinstaller>=6.0"]

[project.scripts]
rmm-backend = "rippermod_manager.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rippermod_manager"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/rippermod_manager/routers/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["rippermod_manager"]
